k8s/fake-products-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-products-service
spec:
  selector:
    matchLabels:
      app: fake-products-service
  template:
    metadata:
      labels:
        app: fake-products-service
    spec:
      containers:
        - name: fake-products-service
          image: ire97/fake_products:v5
          ports:
            - containerPort: 8080
