k8s/fault-detectorHB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fault-detector-hb
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fault-detector-hb
  template:
    metadata:
      labels:
        app: fault-detector-hb
    spec:
      containers:
      - name: fault-detector-hb
        image: 2875apapa/fault-detectorhb2:v1
        ports:
        - containerPort: 1234
        livenessProbe:
          httpGet:
            path: /pinga
            port: 1234
          initialDelaySeconds: 40
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /pinga
            port: 1234
          initialDelaySeconds: 15
          timeoutSeconds: 3
