k8s/modulo1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: order-db
template:
  metadata:
    labels:
      app: order-db
  spec:
    containers:
      - name: order-db
        image: mongo:latest
        ports:
        -containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: order-db-volume
        readinessProbe:
          exec: mongo --eval db.adminCommand('ping')
          initialDelaySeconds: 10
          timeoutSeconds: 1
        livenessProbe:
          exec: mongo --eval db.adminCommand('ping')
          initialDelaySeconds: 20
          timeoutSeconds: 1
        volumes:
        - name: order-db-volume
          persistentVolumeClaim:
          claimName: order-db-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: order
template:
  metadata:
    labels:
      app: order-pod
  spec:
    containers:
      - name: order
        image: order:v1
        ports:
        -containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 3
