k8s/pingackfd1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingackfd1
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pingackfd1
  template:
   metadata:
    labels:
      app: pingackfd1
   spec:
    containers:
      - name: pingackfd1
        image: pingackfd1:v1
        ports:
         - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 3
