k8s/shipping-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service-db
spec:
  selector:
    matchLabels:
      app: shipping-service-db
  template:
    metadata:
      labels:
        app: shipping-service-db
    spec:
      containers:
        - name: shipping-service-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: shipping-service-db-volume
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 20
            timeoutSeconds: 1
      volumes:
        - name: shipping-service-db-volume
          persistentVolumeClaim:
            claimName: shipping-db-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
spec:
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: andreaarciprete/arciprete-chiavetta-progetto-9b:shipping-manager-v7
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping1
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ping1
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 3
