k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkabroker
  labels:
    app: kafkabroker
spec:
  ports:
    - port: 9092
      name: plaintext
    - port: 9999
      name: jmx
  selector:
    app: kafkabroker
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-service
spec:
  ports:
    - name: zookeeper-port
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  ports:
    - port: 8080
  selector:
    app: shipping-service
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: shipping-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: fault-detector-hb
  labels:
    app: fault-detector-hb
spec:
  ports:
    - port: 1234
      name: fd-port
  selector:
    app: fault-detector-hb
---
apiVersion: v1
kind: Service
metadata:
  name: pingackfd1
  labels:
    app: pingackfd1
spec:
  ports:
    - port: 8080
      name: pingackfd1-port
  selector:
    app: pingackfd1
---
apiVersion: v1
kind: Service
metadata:
  name: pingack
spec:
  ports:
    - port: 8080
  selector:
    app: pingack
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice
spec:
  ports:
    - port: 8080
  selector:
    app: payment-microservice
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice-db
spec:
  ports:
    - port: 27017
  selector:
    app: payment-microservice-db
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  ports:
    - port: 8080
  selector:
    app: orders-service
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: orders-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: gestionepagamenti-db
  labels:
    app: gestionepagamenti
spec:
  ports:
    - port: 3306
      name: gp-db-port
  selector:
    app: gestionepagamenti
    tier: pay-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: gestionepagamenti
  labels:
    app: gestionepagamenti
spec:
  ports:
    - port: 8080
      name: gp-port
  selector:
    app: gestionepagamenti
---
apiVersion: v1
kind: Service
metadata:
  name: fake-products-service
spec:
  ports:
    - port: 8080
  selector:
    app: fake-products-service
